--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 						<ul class='meals-showcase'>
 
 								<li>
-										<figure>
+										<figure class='meal-photo'>
 												<img
 												src='/Users/Library/Desktop/jontemtest/omnifood/resources/img/1.jpg'
 												alt='Korean bibimbap with egg
@@ -140,7 +140,7 @@
 										</figure>
 								</li>
 								<li>
-										<figure>
+										<figure class='meal-photo'>
 												<img
 												src='/Users/Library/Desktop/jontemtest/omnifood/resources/img/2.jpg'
 														alt='Simple italian pizza with cherry tomatoes'>
@@ -148,7 +148,7 @@
 										</figure>
 								</li>
 								<li>
-										<figure>
+										<figure class='meal-photo'>
 												<img
 												src='/Users/Library/Desktop/jontemtest/omnifood/resources/img/3.jpg'
 														alt='Chicken breast steak with vegetables'>
@@ -156,7 +156,7 @@
 										</figure>
 								</li>
 								<li>
-										<figure>
+										<figure class='meal-photo'>
 												<img
 												src='/Users/Library/Desktop/jontemtest/omnifood/resources/img/4.jpg'
 														alt='Autumn pumpkin soup'>
@@ -167,14 +167,14 @@
 							<ul class='meals-showcase'>
 
 								<li>
-										<figure>
+										<figure class='meal-photo'>
 												<img
 												src='/Users/Library/Desktop/jontemtest/omnifood/resources/img/5.jpg'
 														alt='Paleo beef steak with vegetables'>
 										</figure>
 								</li>
 								<li>
-										<figure>
+										<figure class='meal-photo'>
 												<img
 												src='/Users/Library/Desktop/jontemtest/omnifood/resources/img/6.jpg'
 														alt='Healthy baguette with egg and vegetables'>
@@ -182,7 +182,7 @@
 										</figure>
 								</li>
 								<li>
-										<figure>
+										<figure class='meal-photo'>
 												<img
 												src='/Users/Library/Desktop/jontemtest/omnifood/resources/img/7.jpg'
 														alt='Burger with cheddar and bacon'>
@@ -190,7 +190,7 @@
 										</figure>
 								</li>
 								<li>
-										<figure>
+										<figure class='meal-photo'>
 												<img
 												src='/Users/Library/Desktop/jontemtest/omnifood/resources/img/8.jpg'
 														alt='Granola with cherries and strawberries'>
