--- a/index.html
+++ b/index.html
@@ -544,11 +544,11 @@
 								</div>
 
 								<div class='col span-1-of-2'>
-										<ul>
-												<li><a href="#"><ion-icon name="logo-facebook"></ion-icon></a></li>
-												<li><a href="#"><ion-icon name="logo-twitter"></ion-icon></a></li>
-												<li><a href='#'><ion-icon name="logo-googleplus"></ion-icon></a></li>
-												<li><a href='#'><ion-icon name="logo-instagram"></ion-icon></a></li>
+										<ul class='social-links'>
+												<li><a href="#"><ion-icon class='social-icons social-fb'  name="logo-facebook"></ion-icon></a></li>
+												<li><a href="#"><ion-icon class='social-icons social-tw' name="logo-twitter"></ion-icon></a></li>
+												<li><a href='#'><ion-icon class='social-icons social-gp' name="logo-googleplus"></ion-icon></a></li>
+												<li><a href='#'><ion-icon class='social-icons social-ig' name="logo-instagram"></ion-icon></a></li>
 										</ul>
 								</div>
 						</div>
