--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<link rel="stylesheet" type="text/css" href="/Users/Library/Desktop/jontemtest/omnifood/vendors/css/normalize.css">
 		<link rel="stylesheet" type="text/css" href="/Users/Library/Desktop/jontemtest/omnifood/vendors/css/grid.css">
 		<link rel="stylesheet" type="text/css" href="/Users/Library/Desktop/jontemtest/omnifood/resources/css/style.css">
+		<link rel="stylesheet" type="text/css" href="/Users/Library/Desktop/jontemtest/omnifood/resources/css/queries.css">
 		<link href="https://fonts.googleapis.com/css?family=Lato:100,300,300i,400" rel="stylesheet">
 		<link href="https://unpkg.com/ionicons@4.4.7/dist/css/ionicons.min.css" rel="stylesheet">
 		<title>OmniFood</title>
